# maid-runner-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
manifests/: task-001-create-blank-mcp-server.manifest.json  task-001-mcp-server-core.manifest.json  task-002-create-tools-package.manifest.json  task-002-maid-validate-tool.manifest.json  task-003-implement-maid-validate-tool.manifest.json  task-003-maid-snapshot-tool.manifest.json  task-004-implement-maid-snapshot-tool.manifest.json  task-004-maid-test-tool.manifest.json  task-005-implement-maid-test-tool.manifest.json  task-005-maid-list-manifests-tool.manifest.json  task-006-implement-maid-list-manifests-tool.manifest.json  task-006-maid-init-schema-tools.manifest.json  task-007-implement-maid-init-tool.manifest.json  task-007-snapshot-system-tool.manifest.json  task-008-generate-stubs-tool.manifest.json  task-008-implement-maid-get-schema-tool.manifest.json  task-009-register-tools-in-server.manifest.json  task-009-resource-infrastructure.manifest.json  task-010-manifest-resource.manifest.json  task-011-schema-resource.manifest.json  task-012-validation-cache-resource.manifest.json  task-013-snapshot-resource.manifest.json  task-014-prompts-foundation.manifest.json  task-015-spike-idea-prompt.manifest.json  task-016-plan-task-prompt.manifest.json  task-017-design-tests-prompt.manifest.json  task-018-review-manifest-prompt.manifest.json  task-019-implement-task-prompt.manifest.json  task-020-refactor-code-prompt.manifest.json  task-021-fix-errors-prompt.manifest.json  task-022-audit-compliance-prompt.manifest.json  task-023-files-tool.manifest.json  task-024-add-mcp-server-instructions.manifest.json  task-025-maid-spec-resource.manifest.json  task-026-roots-utility.manifest.json  task-027-update-validate-tool-cwd.manifest.json  task-028-update-test-tool-cwd.manifest.json  task-029-update-snapshot-tool-cwd.manifest.json  task-030-update-snapshot-system-tool-cwd.manifest.json  task-031-update-schema-tool-cwd.manifest.json  (+7 more)
tests/: __init__.py  (+47 more)
(+43 files in other folders)
