[project]
name = "maid-runner-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for MAID Runner - exposes validation tools to AI agents via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Mamerto Fabian Jr.", email = "mamerto@codefrost.com"}
]
keywords = ["maid", "mcp", "model-context-protocol", "ai", "development", "validation", "manifest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "maid-runner",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mamertofabian/maid-runner-mcp"
Repository = "https://github.com/mamertofabian/maid-runner-mcp"
Issues = "https://github.com/mamertofabian/maid-runner-mcp/issues"
Documentation = "https://github.com/mamertofabian/maid-runner-mcp#readme"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "black>=25.1.0",
    "ruff>=0.13.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "maid-agents",
]

[project.scripts]
maid-runner-mcp = "maid_runner_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["maid_runner_mcp*"]
exclude = ["tests*", "manifests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
maid-runner = { path = "../maid-runner", editable = true }
